--- a/proyecto/templates/requisitos.html
+++ b/proyecto/templates/requisitos.html
@@ -43,5 +43,40 @@
         </div>
         <div class="wave"></div>
     </section>
+    <section class="requisitos">
+    <dl>
+        <dt>Primer Requisito</dt>
+        <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure necessitatibus voluptates corrupti, libero voluptatum sunt!</dd>
+      </dl>
+      <dl>
+        <dt>segundo Requisito</dt>
+        <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure necessitatibus voluptates corrupti, libero voluptatum sunt!</dd>
+      </dl>
+      <dl>
+        <dt>tercer Requisito</dt>
+        <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure necessitatibus voluptates corrupti, libero voluptatum sunt!</dd>
+      </dl>
+      <dl>
+        <dt>Cuarto Requisito</dt>
+        <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure necessitatibus voluptates corrupti, libero voluptatum sunt!</dd>
+      </dl>
+      <dl>
+        <dt>Quinto Requisito</dt>
+        <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure necessitatibus voluptates corrupti, libero voluptatum sunt!</dd>
+      </dl>
+      <dl>
+        <dt>Sexto Requisito</dt>
+        <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure necessitatibus voluptates corrupti, libero voluptatum sunt!</dd>
+      </dl>
+    </section>
+    
+    <section class="footer">
+        <ul class="sci">
+            <li><a href="#"><img src="img/facebook.png" alt=""></a></li>
+            <li><a href="#"><img src="img/twitter.png" alt=""></a></li>
+            <li><a href="#"><img src="img/instagram.png" alt=""></a></li>
+        </ul>
+        <h4>Copyright &copy;2020</h4>
+    </section>
 </body>
 </html>
