--- a/proyecto/templates/RH.html
+++ b/proyecto/templates/RH.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
+
 <body>
     <section class="header">
         <a href="index.html" class="logo">
@@ -43,5 +45,101 @@
         </div>
         <div class="wave"></div>
     </section>
+    <section class="types">
+        <div class="container">
+            <div class="card">
+                <div class="imgBx">
+                    <img src="img/blood-drop.png" alt="">
+                </div>
+                <div class="content">
+                    <h3>A+</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, distinctio labore modi totam
+                        facere ipsa corrupti, eaque doloremque rem necessitatibus culpa maiores minima repudiandae aut
+                        dolore cupiditate accusamus ipsam nam.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="imgBx">
+                    <img src="img/blood-drop A-.png" alt="">
+                </div>
+                <div class="content">
+                    <h3>A+</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, distinctio labore modi totam
+                        facere ipsa corrupti, eaque doloremque rem necessitatibus culpa maiores minima repudiandae aut
+                        dolore cupiditate accusamus ipsam nam.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="imgBx">
+                    <img src="img/blood-drop B+.png" alt="">
+                </div>
+                <div class="content">
+                    <h3>B+</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, distinctio labore modi totam
+                        facere ipsa corrupti, eaque doloremque rem necessitatibus culpa maiores minima repudiandae aut
+                        dolore cupiditate accusamus ipsam nam.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="imgBx">
+                    <img src="img/blood-drop B-.png" alt="">
+                </div>
+                <div class="content">
+                    <h3>B-</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, distinctio labore modi totam
+                        facere ipsa corrupti, eaque doloremque rem necessitatibus culpa maiores minima repudiandae aut
+                        dolore cupiditate accusamus ipsam nam.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="imgBx">
+                    <img src="img/blood-drop AB-.png" alt="">
+                </div>
+                <div class="content">
+                    <h3>A+</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, distinctio labore modi totam
+                        facere ipsa corrupti, eaque doloremque rem necessitatibus culpa maiores minima repudiandae aut
+                        dolore cupiditate accusamus ipsam nam.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="imgBx">
+                    <img src="img/blood-drop AB+.png" alt="">
+                </div>
+                <div class="content">
+                    <h3>A+</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, distinctio labore modi totam
+                        facere ipsa corrupti, eaque doloremque rem necessitatibus culpa maiores minima repudiandae aut
+                        dolore cupiditate accusamus ipsam nam.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="imgBx">
+                    <img src="img/blood-drop o-.png" alt="">
+                </div>
+                <div class="content">
+                    <h3>A+</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, distinctio labore modi totam
+                        facere ipsa corrupti, eaque doloremque rem necessitatibus culpa maiores minima repudiandae aut
+                        dolore cupiditate accusamus ipsam nam.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="imgBx">
+                    <img src="img/blood-drop o.png" alt="">
+                </div>
+                <div class="content">
+                    <h3>A+</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, distinctio labore modi totam
+                        facere ipsa corrupti, eaque doloremque rem necessitatibus culpa maiores minima repudiandae aut
+                        dolore cupiditate accusamus ipsam nam.</p>
+                </div>
+            </div>
+        </div>
+        <div>
+
+        </div>
+    </section>
 </body>
+
 </html>
