--- a/proyecto/templates/Registro_Parejas.html
+++ b/proyecto/templates/Registro_Parejas.html
@@ -61,11 +61,11 @@
             <div class="rd-navbar-nav-wrap rd-navbar-search_not-collapsable">
               <div class="rd-navbar-search_collapsable">
                 <ul class="rd-navbar-nav">
-                  <li><a href="{% url 'home' %}">Home</a>
+                  <li><a href="{% url 'home' %}">Pecados Capitales</a>
                   </li>
-                  <li><a href="#">Pecados capitales</a>
+                  <li><a href="{% url 'pelea' %}">Peleas</a>
                   </li>
-                  <li><a href="#">Caballeros sacros</a>
+                  <li><a href="{% url 'caballero' %}">Caballeros sacros</a>
                   </li>
                   <li><a href="{% url 'lugar' %}">Lugares</a>
                   </li>
