--- a/proyecto/templates/caballero.html
+++ b/proyecto/templates/caballero.html
@@ -3,7 +3,7 @@
 
 <head>
     <!-- Site Title-->
-    <title>parejas</title>
+    <title>caballero</title>
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport"
         content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -56,7 +56,7 @@
                             <button class="rd-navbar-toggle"
                                 data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                             <!-- RD Navbar Brand-->
-                            <div class="rd-navbar-brand"><a class="brand-name" href="home"><img
+                            <div class="rd-navbar-brand"><a class="brand-name" href="{% url 'home' %}"><img
                                         src="../static/images/pngguru.com.png" alt="" width="80px" height="33" /></a></div>
                         </div>
                         <!-- RD Navbar Nav-->
@@ -67,11 +67,11 @@
                                     </li>
                                     <li><a href="{% url 'pelea' %}">Peleas</a>
                                     </li>
-                                    <li><a href="{% url 'caballero' %}">Caballeros sacros</a>
+                                    <li class="active"><a href="{% url 'caballero' %}">Caballeros sacros</a>
                                     </li>
                                     <li><a href="{% url 'lugar' %}">Lugares</a>
                                     </li>
-                                    <li class="active"><a href="{% url 'pareja' %}">Parejas</a></li>
+                                    <li><a href="{% url 'pareja' %}">Parejas</a></li>
                                   </ul>
                             </div>
                         </div>
@@ -81,14 +81,14 @@
         </header>
         <!-- Parallax header-->
         <section>
-            <section class="section parallax-container context-dark" data-parallax-img="../static/images/fondo.jpg">
+            <section class="section parallax-container context-dark" data-parallax-img="../static/images/fondos.jpg">
                 <div class="parallax-content parallax-header">
                     <div class="parallax-header__inner context-dark">
                         <div class="parallax-header__content">
                             <div class="container">
                                 <div class="row justify-content-sm-center">
                                     <div class="col-md-10 col-xl-8">
-                                        <h2 class="heading-decorated">Pareja</h2>
+                                        <h2 class="heading-decorated">Caballeros</h2>
                                     </div>
                                 </div>
                             </div>
@@ -108,9 +108,10 @@
                             <thead>
                                 <tr>
                                     <th>#</th>
-                                    <th>pareja 1</th>
-                                    <th>pareja 2</th>
-                                    
+                                    <th>Nombre</th>
+                                    <th>Rango</th>
+                                    <th>Poder</th>
+                                    <th>foto</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -118,24 +119,29 @@
                                     <th>1</th>
                                     <td>Mark</td>
                                     <td>Otto</td>
-                                    
+                                    <td>Otto</td>
+                                    <td>Otto</td>
                                 </tr>
                                 <tr>
                                     <th>2</th>
                                     <td>Jacob</td>
                                     <td>Thornton</td>
+                                    <td>Otto</td>
+                                    <td>Otto</td>
                                    
                                 </tr>
                                 <tr>
                                     <th>3</th>
                                     <td>Larry </td>
                                     <td>Bird</td>
+                                    <td>Otto</td>
+                                    <td>Otto</td>
                                     
                                 </tr>
                             </tbody>
                         </table>
-                        <a href="{% url 'registrarPareja' %}"><button class="button button-primary button-shadow"
-                                type="submit">Registrar nueva pareja</button></a>
+                        <a href="{% url 'registrarCaballero' %}"><button class="button button-primary button-shadow"
+                                type="submit">Registrar nuevo Caballero</button></a>
                     </div>
 
                 </div>
