--- a/proyecto/templates/Lugares.html
+++ b/proyecto/templates/Lugares.html
@@ -64,16 +64,16 @@
                         <div class="rd-navbar-nav-wrap rd-navbar-search_not-collapsable">
                             <div class="rd-navbar-search_collapsable">
                                 <ul class="rd-navbar-nav">
-                                    <li><a href="{% url 'home' %}">Home</a>
+                                    <li><a href="{% url 'home' %}">Pecados Capitales</a>
                                     </li>
-                                    <li><a href="#">Pecados capitales</a>
+                                    <li><a href="{% url 'pelea' %}">Peleas</a>
                                     </li>
-                                    <li><a href="#">Caballeros sacros</a>
+                                    <li><a href="{% url 'caballero' %}">Caballeros sacros</a>
                                     </li>
-                                    <li class="active"><a href="#">Lugares</a>
+                                    <li class="active"><a href="{% url 'lugar' %}">Lugares</a>
                                     </li>
-                                    <li><a href="{% url 'pareja' %}">Parejas</a>
-                                </ul>
+                                    <li><a href="{% url 'pareja' %}">Parejas</a></li>
+                                  </ul>
                             </div>
                         </div>
                     </div>
