--- a/proyecto/templates/parejas.html
+++ b/proyecto/templates/parejas.html
@@ -106,32 +106,29 @@
                     <div class="col-md-12  to-animate">
                         <table class="table table-sm">
                             <thead>
-                                <tr>
+                                <tr>                                   
                                     <th>#</th>
-                                    <th>pareja 1</th>
-                                    <th>pareja 2</th>
+                                    <th>Pareja 1</th>
+                                    <th>Pareja 2</th>
                                     
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <th>1</th>
-                                    <td>Mark</td>
-                                    <td>Otto</td>
-                                    
-                                </tr>
-                                <tr>
-                                    <th>2</th>
-                                    <td>Jacob</td>
-                                    <td>Thornton</td>
-                                   
-                                </tr>
-                                <tr>
-                                    <th>3</th>
-                                    <td>Larry </td>
-                                    <td>Bird</td>
-                                    
-                                </tr>
+                                {% for pareja in parejas %}
+                                <tr> 
+                                    <td>{{ forloop.counter }}</td>
+                                    <td>{{pareja.pareja1}} </td>
+                                    <td>{{pareja.pareja2}} </td>                                            
+                                    <td>                                        
+                                        <form action="{% url 'eliminar_pareja' pareja.id %}" method="POST" class="d-inline">
+                                            {% csrf_token %}
+                                            <button type="submit" class="btn">
+                                                <i class="far fa-trash-alt fa-lg text-danger float-right"></i>
+                                            </button>                                            
+                                        </form>                                                
+                                    </td>                                        
+                                <tr>                                   
+                                {% endfor %}
                             </tbody>
                         </table>
                         <a href="{% url 'registrarPareja' %}"><button class="button button-primary button-shadow"
